--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background-color: black;
+  background-color: #f8f8f8;
 }
 
 .app_header {
@@ -88,7 +88,6 @@ body {
   }
 }
 
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
   display: none;
@@ -96,6 +95,6 @@ body::-webkit-scrollbar {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 body {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
