--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -6,12 +6,13 @@
   background-color: white;
 }
 
-.table tr {
+/* .table tr {
   display: flex;
   justify-content: space-between;
-}
+} */
 
 .table td {
+  width: 100%;
   padding: 0.5rem;
 }
 
